--- a/portfolio2.html
+++ b/portfolio2.html
@@ -21,7 +21,9 @@
     <div class="title-container">
         <h1 class="title">Charles Catura</h1>
         <h2 class="sub-title">
-            Web Developer...<div class="cursor-blink"></div></h2>
+            Web Dev Portfolio...
+            <!-- <?php include 'include/sub-title.php';?> -->
+    <div class="cursor-blink"></div></h2>
          
     </div>
 
