third portfolio design

--- a/portfolio3.html
+++ b/portfolio3.html
@@ -34,6 +34,21 @@
     </div>
 </div>
     
+<div class="middle-container">
+    <div class="thumbs-container">
+        <div class="thumb">T</div>
+        <div class="thumb">T</div>
+        <div class="thumb">T</div>
+        <div class="thumb">T</div>
+        <div class="thumb">T</div>
+        <div class="thumb">T</div>
+
+    </div>
+
+
+
+
+</div>
 
 
 
