more tweaks to #3 again

--- a/portfolio3.html
+++ b/portfolio3.html
@@ -16,41 +16,54 @@
 </head>
 <body>
     
+<div class="page-container">
 
-<div class="top-container">
-    <div class="title-container">
-        <h1 class="title">Charles Catura</h1>
-        <h2 class="sub-title">
-            Web Dev Portfolio...
-            <div class="cursor-blink"></div>
-        </h2>
+    <div class="middle-container">
+        <div class="thumbs-container">
+            <div class="thumb">T</div>
+            <div class="thumb">T</div>
+            <div class="thumb">T</div>
+            <div class="thumb">T</div>
+            <div class="thumb">T</div>
+            <div class="thumb">T</div>
+
+            <div class="thumb">T</div>
+            <div class="thumb">T</div>
+            <div class="thumb">T</div>
+            <div class="thumb">T</div>
+            <div class="thumb">T</div>
+            <div class="thumb">T</div>
+            <div class="thumb">T</div>
+            <div class="thumb">T</div>
+            <div class="thumb">T</div>
+            <div class="thumb">T</div>
+            <div class="thumb">T</div>
+            <div class="thumb">T</div>
+       </div>
+
+
+
+
     </div>
 
-    <div class="links-container">
-        <div class="link">X</div>
-        <div class="link">X</div>
-        <div class="link">X</div>
-        <div class="link">X</div>
+    <div class="top-container">
+        <div class="title-container">
+            <h1 class="title">Charles Catura</h1>
+            <h2 class="sub-title">
+                Web Dev Portfolio...
+                <div class="cursor-blink"></div>
+            </h2>
+        </div>
+
+        <div class="links-container">
+            <div class="link">X</div>
+            <div class="link">X</div>
+            <div class="link">X</div>
+            <div class="link">X</div>
+        </div>
     </div>
-</div>
     
-<div class="middle-container">
-    <div class="thumbs-container">
-        <div class="thumb">T</div>
-        <div class="thumb">T</div>
-        <div class="thumb">T</div>
-        <div class="thumb">T</div>
-        <div class="thumb">T</div>
-        <div class="thumb">T</div>
-
-    </div>
-
-
-
-
 </div>
-
-
 
 
 
