--- a/portfolio3.html
+++ b/portfolio3.html
@@ -25,8 +25,9 @@
             <div class="thumb">T</div>
             <div class="thumb">T</div>
             <div class="thumb">T</div>
-            <div class="thumb">T</div>
 
+
+            <!-- <div class="thumb">T</div>
             <div class="thumb">T</div>
             <div class="thumb">T</div>
             <div class="thumb">T</div>
@@ -37,14 +38,19 @@
             <div class="thumb">T</div>
             <div class="thumb">T</div>
             <div class="thumb">T</div>
-            <div class="thumb">T</div>
-            <div class="thumb">T</div>
+            <div class="thumb">T</div> -->
        </div>
-
-
-
-
     </div>
+
+    <div class="about-container">
+
+            <img src="images/photos/me-headshot-2.jpg" alt="">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab id repellat vero facere aliquid, error blanditiis voluptatem velit odit in mollitia doloremque nulla, rerum eveniet neque, dolorum maxime voluptatibus. Iste.</p>
+    </div>
+
+
+
+
 
     <div class="top-container">
         <div class="title-container">
