more tweaks to #3 again again again again again

--- a/portfolio3.html
+++ b/portfolio3.html
@@ -4,7 +4,7 @@
     <script src="portfolio3.js" defer></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
     <link rel="stylesheet" href="./portfolio3.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,11 +20,26 @@
 
     <div class="middle-container">
         <div class="thumbs-container">
-            <div class="thumb">T</div>
-            <div class="thumb">T</div>
-            <div class="thumb">T</div>
-            <div class="thumb">T</div>
-            <div class="thumb">T</div>
+            <div class="thumb">
+                <img src="images/thumbs/thumb-dk.png">
+                <span>Other<br>Non-Programming</span>
+            </div>
+            <div class="thumb">
+                <img src="images/thumbs/thumb-dk.png">
+                <span>Other<br>Non-Programming</span>
+            </div>
+            <div class="thumb">
+                <img src="images/thumbs/thumb-dk.png">
+                <span>Other<br>Non-Programming</span>
+            </div>
+            <div class="thumb">
+                <img src="images/thumbs/thumb-dk.png">
+                <span>Other<br>Non-Programming</span>
+            </div>
+            <div class="thumb">
+                <img src="images/thumbs/thumb-dk.png">
+                <span>Other<br>Non-Programming</span>
+            </div>
 
 
             <!-- <div class="thumb">T</div>
@@ -62,10 +77,10 @@
         </div>
 
         <div class="links-container">
-            <div class="link">X</div>
-            <div class="link">X</div>
-            <div class="link">X</div>
-            <div class="link">X</div>
+            <div class="link">About Me</div>
+            <div class="link">GitHub</div>
+            <div class="link">LinkedIn</div>
+            <div class="link">Email Me</div>
         </div>
     </div>
     
