--- a/portfolio3.html
+++ b/portfolio3.html
@@ -22,19 +22,23 @@
         <div class="thumbs-container">
             <div class="thumb">
                 <img src="images/thumbs/thumb-dk.png">
-                <span>Other<br>Non-Programming</span>
+                <span>Social<br>Twitter Clone (sorta)</span>
             </div>
             <div class="thumb">
                 <img src="images/thumbs/thumb-dk.png">
-                <span>Other<br>Non-Programming</span>
+                <span>Utility<br>Gift Tracker</span>
             </div>
             <div class="thumb">
                 <img src="images/thumbs/thumb-dk.png">
-                <span>Other<br>Non-Programming</span>
+                <span>Utility<br>Money Register</span>
             </div>
             <div class="thumb">
                 <img src="images/thumbs/thumb-dk.png">
-                <span>Other<br>Non-Programming</span>
+                <span>Utility<br>Quasar Image Database</span>
+            </div>
+            <div class="thumb">
+                <img src="images/thumbs/thumb-dk.png">
+                <span>Game<br>Donkey Kong Fever</span>
             </div>
             <div class="thumb">
                 <img src="images/thumbs/thumb-dk.png">
