did some more stuff

--- a/portfolio3.html
+++ b/portfolio3.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <!-- Google Fonts End -->
-    <title>Charles Catura - Web Portfolio</title>
+    <title>Charles Catura - Web Development Portfolio</title>
 </head>
 <body>
     
@@ -20,51 +20,39 @@
 
     <div class="middle-container">
         <div class="thumbs-container">
-            <div class="thumb">
+            <figure class="thumb">
                 <img src="images/thumbs/thumb-dk.png">
-                <span>Social<br>Twitter Clone (sorta)</span>
-            </div>
-            <div class="thumb">
+                <figcaption>Social<br>Twitter Clone (sorta)</figcaption>
+            </figure>
+            <figure class="thumb">
                 <img src="images/thumbs/thumb-dk.png">
-                <span>Utility<br>Gift Tracker</span>
-            </div>
-            <div class="thumb">
+                <figcaption>Utility<br>Gift Tracker</figcaption>
+            </figure>
+            <figure class="thumb">
                 <img src="images/thumbs/thumb-dk.png">
-                <span>Utility<br>Money Register</span>
-            </div>
-            <div class="thumb">
+                <figcaption>Utility<br>Money Register</figcaption>
+            </figure>
+            <figure class="thumb">
+                <img src="images/thumbs/quasar.jpg">
+                <figcaption>Utility<br>Quasar Image Database</figcaption>
+            </figure>
+            <figure class="thumb">
                 <img src="images/thumbs/thumb-dk.png">
-                <span>Utility<br>Quasar Image Database</span>
-            </div>
-            <div class="thumb">
-                <img src="images/thumbs/thumb-dk.png">
-                <span>Game<br>Donkey Kong Fever</span>
-            </div>
-            <div class="thumb">
-                <img src="images/thumbs/thumb-dk.png">
-                <span>Other<br>Non-Programming</span>
-            </div>
+                <figcaption>Game<br>Donkey Kong Fever</figcaption>
+            </figure>
+            <figure class="thumb">
+                <img src="images/thumbs/watches.jpg">
+                <figcaption>Other<br>Non-Programming</figcaption>
+            </figure>
 
 
-            <!-- <div class="thumb">T</div>
-            <div class="thumb">T</div>
-            <div class="thumb">T</div>
-            <div class="thumb">T</div>
-            <div class="thumb">T</div>
-            <div class="thumb">T</div>
-            <div class="thumb">T</div>
-            <div class="thumb">T</div>
-            <div class="thumb">T</div>
-            <div class="thumb">T</div>
-            <div class="thumb">T</div>
-            <div class="thumb">T</div> -->
        </div>
     </div>
 
     <div class="about-container">
 
             <img src="images/photos/me-headshot-2.jpg" alt="">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab id repellat vero facere aliquid, error blanditiis voluptatem velit odit in mollitia doloremque nulla, rerum eveniet neque, dolorum maxime voluptatibus. Iste.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab id repellat vero facere aliquid, error blanditiis voluptatem velit odit in mollitia doloremque nulla, rerum eveniet neque, dolorum maxime voluptatibus. Iste. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab id repellat vero facere aliquid, error blanditiis voluptatem velit odit in mollitia doloremque nulla, rerum eveniet neque, dolorum maxime voluptatibus. Iste.</p>
     </div>
 
 
@@ -75,7 +63,7 @@
         <div class="title-container">
             <h1 class="title">Charles Catura</h1>
             <h2 class="sub-title">
-                Web Dev Portfolio...
+                Web Development Portfolio...
                 <div class="cursor-blink"></div>
             </h2>
         </div>
@@ -87,6 +75,17 @@
             <div class="link">Email Me</div>
         </div>
     </div>
+
+    <div class="bottom-container">
+        <div class="footer">Hi, this is the footer!</div>
+
+
+    </div>
+
+
+
+
+
     
 </div>
 
