--- a/portfolio3.html
+++ b/portfolio3.html
@@ -22,27 +22,27 @@
         <div class="thumbs-container">
             <figure class="thumb">
                 <img src="images/thumbs/thumb-dk.png">
-                <figcaption>Social<br>Twitter Clone (sorta)</figcaption>
+                <figcaption>Twitter Clone (sorta)</figcaption>
             </figure>
             <figure class="thumb">
                 <img src="images/thumbs/thumb-dk.png">
-                <figcaption>Utility<br>Gift Tracker</figcaption>
+                <figcaption>Gift Tracker</figcaption>
             </figure>
             <figure class="thumb">
                 <img src="images/thumbs/thumb-dk.png">
-                <figcaption>Utility<br>Money Register</figcaption>
+                <figcaption>Money Register</figcaption>
             </figure>
             <figure class="thumb">
                 <img src="images/thumbs/quasar.jpg">
-                <figcaption>Utility<br>Quasar Image Database</figcaption>
+                <figcaption>Quasar Image Database</figcaption>
             </figure>
             <figure class="thumb">
                 <img src="images/thumbs/thumb-dk.png">
-                <figcaption>Game<br>Donkey Kong Fever</figcaption>
+                <figcaption>Donkey Kong Fever</figcaption>
             </figure>
             <figure class="thumb">
                 <img src="images/thumbs/watches.jpg">
-                <figcaption>Other<br>Non-Programming</figcaption>
+                <figcaption>Non-Programming</figcaption>
             </figure>
 
 
