--- a/portfolio3.html
+++ b/portfolio3.html
@@ -21,15 +21,15 @@
     <div class="middle-container">
         <div class="thumbs-container">
             <figure class="thumb">
-                <img src="images/thumbs/thumb-dk.png">
+                <img src="">
                 <figcaption>Twitter Clone (sorta)</figcaption>
             </figure>
             <figure class="thumb">
-                <img src="images/thumbs/thumb-dk.png">
+                <img src="">
                 <figcaption>Gift Tracker</figcaption>
             </figure>
             <figure class="thumb">
-                <img src="images/thumbs/thumb-dk.png">
+                <img src="images/thumbs/money.jpg">
                 <figcaption>Money Register</figcaption>
             </figure>
             <figure class="thumb">
@@ -37,12 +37,12 @@
                 <figcaption>Quasar Image Database</figcaption>
             </figure>
             <figure class="thumb">
-                <img src="images/thumbs/thumb-dk.png">
+                <img src="images/thumbs/dk.jpg">
                 <figcaption>Donkey Kong Fever</figcaption>
             </figure>
             <figure class="thumb">
                 <img src="images/thumbs/watches.jpg">
-                <figcaption>Non-Programming</figcaption>
+                <figcaption>Non-Coding Related Projects</figcaption>
             </figure>
 
 
@@ -71,10 +71,18 @@
 
         
         <div class="links-container">
-            <div class="link">About Me</div>
-            <div class="link">GitHub</div>
-            <div class="link">LinkedIn</div>
-            <div class="link">Email Me</div>
+            <div class="link">About Me
+                <div class="popup">Read About Me</div>
+            </div>
+            <div class="link">GitHub
+                <div class="popup">Visit My GitHub</div>
+            </div>
+            <div class="link">LinkedIn
+                <div class="popup">Visit My LinkedIn</div>
+            </div>
+            <div class="link">Email Me
+                <div class="popup">Email Me</div>
+            </div>
         </div>
     </div>
 
@@ -83,8 +91,6 @@
 
 
     </div>
-
-
 
 
 
