changed popus, made a new project page

--- a/portfolio3.html
+++ b/portfolio3.html
@@ -20,10 +20,12 @@
 
     <div class="middle-container">
         <div class="thumbs-container">
-            <figure class="thumb">
-                <img src="">
-                <figcaption>Twitter Clone (sorta)</figcaption>
-            </figure>
+            
+                <figure class="thumb" id="twitter-clone">
+                    <img src="">
+                    <a href="twitter-clone.html"><figcaption>Twitter Clone (sorta)</figcaption></a>
+                </figure>
+            
             <figure class="thumb">
                 <img src="">
                 <figcaption>Gift Tracker</figcaption>
