--- a/portfolio3.html
+++ b/portfolio3.html
@@ -21,27 +21,35 @@
     <div class="middle-container">
         <div class="thumbs-container">
             
-                <figure class="thumb" id="twitter-clone">
-                    <img src="">
-                    <a href="twitter-clone.html"><figcaption>Twitter Clone (sorta)</figcaption></a>
-                </figure>
+            <figure class="thumb" id="twitter-clone">
+                <img src="">
+                <a href="twitter-clone.html">
+                    <figcaption>Twitter Clone (sorta)</figcaption>
+                </a>
+            </figure>
             
             <figure class="thumb">
-                <img src="">
-                <figcaption>Gift Tracker</figcaption>
+                <img src="images/thumbs/quota.png">
+                <a href="https://quota-calculator.netlify.app/">
+                    <figcaption>Quota Calculator</figcaption>
+                </a>
             </figure>
+
             <figure class="thumb">
                 <img src="images/thumbs/money.jpg">
                 <figcaption>Money Register</figcaption>
             </figure>
+
             <figure class="thumb">
                 <img src="images/thumbs/quasar.jpg">
                 <figcaption>Quasar Image Database</figcaption>
             </figure>
+
             <figure class="thumb">
                 <img src="images/thumbs/dk.jpg">
                 <figcaption>Donkey Kong Fever</figcaption>
             </figure>
+
             <figure class="thumb">
                 <img src="images/thumbs/watches.jpg">
                 <figcaption>Non-Coding Related Projects</figcaption>
