fixed javascript once again

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <style> @import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap'); </style>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <title>Charles Catura - Web Development Portfolio</title>
-    <script src="./scripts.js" defer></script>
-    
+    <script type="module" src="./scripts.js" defer></script>
+
 </head>
 <body>
     
